--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,71 @@
 amqp==5.1.1
 asgiref==3.7.2
+autopep8==2.0.1
+aws==0.2.5
+awscli==1.27.93
+bcrypt==4.0.1
 billiard==4.1.0
+boto==2.49.0
+boto3==1.26.93
+botocore==1.29.93
+celery==5.3.4
 certifi==2023.7.22
-cffi==1.16.0
 charset-normalizer==3.3.1
 click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+cryptography==39.0.2
+distlib==0.3.7
 dj-database-url==2.1.0
 Django==4.2.7
 django-cuser==2017.3.16
+django-heroku==0.3.1
 django-modeltranslation==0.18.11
 django-tinymce==3.6.1
+docutils==0.16
+fabric==3.0.0
+filelock==3.12.2
 force==0.1.4
 gevent==23.9.1
 greenlet==3.0.0
-gunicorn==21.2.0
 idna==3.4
+invoke==2.0.0
+jmespath==1.0.1
 kombu==5.3.2
 newsapi-python==0.2.7
-packaging==23.2
+numpy==1.24.2
+opencv-python==4.7.0.68
+paramiko==3.1.0
 Pillow==10.1.0
+platformdirs==3.10.0
+prettytable==3.6.0
 prompt-toolkit==3.0.39
 psycopg2==2.9.9
+psycopg2-binary==2.9.9
+pyasn1==0.4.8
+pycodestyle==2.10.0
 pycparser==2.21
+pygame==2.1.2
+PyNaCl==1.5.0
 python-dateutil==2.8.2
 python-gettext==5.0
+PyYAML==5.4.1
 rabbitmq==0.2.0
 requests==2.31.0
+rsa==4.7.2
+s3transfer==0.6.0
 schedule==1.2.1
 six==1.16.0
 sqlparse==0.4.4
+tomli==2.0.1
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.7
 vine==5.0.0
+virtualenv==20.24.3
 wcwidth==0.2.8
+whitenoise==6.6.0
 zope.event==5.0
 zope.interface==6.1
