--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ colorama==0.4.6
 cryptography==39.0.2
 distlib==0.3.7
 dj-database-url==2.1.0
-Django==4.2.7
+Django==3.2.23
 django-cuser==2017.3.16
 django-heroku==0.3.1
 django-modeltranslation==0.18.11
@@ -51,6 +51,7 @@ pygame==2.1.2
 PyNaCl==1.5.0
 python-dateutil==2.8.2
 python-gettext==5.0
+pytz==2023.3.post1
 PyYAML==5.4.1
 rabbitmq==0.2.0
 requests==2.31.0
