--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ boto3==1.26.93
 botocore==1.29.93
 celery==5.3.0
 certifi==2023.7.22
+cffi==1.16.0
 charset-normalizer==3.3.1
 click==8.1.7
 click-didyoumean==0.3.0
@@ -28,7 +29,7 @@ docutils==0.16
 fabric==3.0.0
 filelock==3.12.2
 force==0.1.4
-gevent==23.9.1
+gevent==22.10.2
 greenlet==3.0.0
 idna==3.4
 invoke==2.0.0
