--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ greenlet==3.0.0
 idna==3.4
 invoke==2.0.0
 jmespath==1.0.1
-kombu==5.3.2
+kombu==5.3.0b3
 newsapi-python==0.2.7
 numpy==1.24.2
 opencv-python==4.7.0.68
